# wheel_legged_robot_sim

./: .gitignore  LICENSE  README.md  launch_viewer.py  profile_sim.py  pyproject.toml
scripts/: collect_gamepad_hid_mapping.py  decimate_base_link.py  decode_gamepad_hid.py  generate_structure_doc.py  probe_gamepad.py  probe_height_lower_bound.py  probe_leg_full_range.py  probe_leg_geometry.py  probe_leg_geometry_analytic.py  record_lqr.py  render_success.py  replay_height_compare.py  rotate_urdf.py  test_low_jump.py  test_repeated_jumps.py  trace_low_jump.py  trace_single_jump.py  tune_lqr_headless.py  verify_cmd_height_tracking.py  verify_height_sweep.py  verify_hip_axis_mirror.py  verify_jump_height.py  verify_single_wheel_ramp.py  verify_startup_drift.py
sim/: gamepad.py  gamepad_hid_mapping.py  launch_mujoco.py  logger.py  model_xml.py  optimize.py  rollout.py  state.py
sim/controllers/: balance_lqr.py  balance_state.py  combined.py  default_params.py  jump_trajectory.py  leg_height_lut.py  lqr.py  phase.py  vmc.py
sim/robot/: robot.urdf
sim/robot/meshes/: link2_left.stl
src/: gamepad_hid_mapping.py  launch_mujoco.py  linearize.py  logger.py  metrics.py  mjcf_builder.py  model_semantics.py  mujoco_mesh_preprocess.py  optimize.py  rollout.py  state.py
src/controllers/: balance_lqr.py  balance_state.py  combined.py  default_params.py  leg_height_lut.json  leg_height_lut.py  lqr.py  phase.py  vmc.py
src/robot/meshes/: base_link.stl  link1_left.stl  link1_right.stl  link2_right.stl  link3_left.stl  link3_right.stl  wheel_left.stl  wheel_right.stl
tests/: test_balance_5d.py  test_balance_roll_6d.py  test_current_model_initialization.py  test_default_params.py  test_equilibrium_pitch_and_position.py  test_gamepad_hid_mapping.py  test_gamepad_mapper.py  test_heading_hold.py  test_headless_analysis.py  test_headless_analysis2.py  test_jump_trajectory.py  test_launch_mujoco.py  test_leg_height_lut.py  test_phase.py  test_single_wheel_ramp_roll_leveling.py  test_single_wheel_terrain.py  test_viewer_symmetry.py  test_vmc_geometry.py
