[project]
name = "wheel-legged-robot-sim"
version = "0.1.0"
description = "MuJoCo simulation of a wheel-legged robot: LQR + VMC balance and jumping control."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
    "mujoco>=3.7.0",
    "numpy>=2.0",
    "scipy>=1.17.1",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "optuna>=4.8.0",
]

[project.optional-dependencies]
# Optional real-gamepad input for the interactive viewer (macOS).
# The sim runs without these; gamepad backends are imported lazily.
gamepad = [
    "hidapi>=0.15.0",
    "pyobjc-framework-GameController>=10.0",
]

[project.urls]
Repository = "https://github.com/Edmounds/wheel_legged_robot_sim"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
include = ["src"]
extraPaths = ["."]
venvPath = "."
venv = ".venv"
